<resources>
    <!-- Main activity -->
    <string name="app_name">BLE Project Zero</string>
    <string name="button_connect">Connect</string>

    <!-- Second activity -->
    <string name="title_activity_selected_device">SelectedDeviceActivity</string>

    <string name="label_state">State:</string>
    <string name="label_data">Received Data:</string>
    <string name="label_led">LED:</string>
    <string name="label_button">Button:</string>

    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="read">COLLECT</string>
    <string name="write">EDIT</string>
    <string name="pressed">Pressed</string>
    <string name="menu_connect">CONNECT</string>
    <string name="menu_disconnect">DISCONNECT</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
</resources>
