<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ti.bleprojectzero.SelectedDeviceActivity"
    tools:showIn="@layout/activity_selected_device">
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="@color/primaryLight"
        android:padding="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="16sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="16sp"/>
    </LinearLayout>

    <RelativeLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:id="@+id/label_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <EditText android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:layout_below="@id/label_data"
            android:inputType="text" />
        <Button android:id="@+id/data_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:layout_below="@id/data_value"
            android:onClick="onDataRead"/>
        <Button android:id="@+id/data_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:layout_toRightOf="@id/data_read"
            android:layout_below="@id/data_value"
            android:onClick="onDataWrite"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/led_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_led"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/led0_value"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/led_label"
            android:layout_margin="10dp"
            android:background="@drawable/led_red"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/led1_value"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/led_label"
            android:layout_margin="10dp"
            android:layout_toRightOf="@id/led0_value"
            android:background="@drawable/led_green"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_label"
            android:id="@+id/space" />

        <ToggleButton
            android:id="@+id/button0_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_label"
            android:enabled="false"
            android:textColor="#000000"
            android:textOff=""
            android:textOn="@string/pressed" />

        <ToggleButton
            android:id="@+id/button1_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="#000000"
            android:textOff=""
            android:textOn="@string/pressed"
            android:layout_below="@+id/space"
            android:layout_toEndOf="@+id/button0_value" />
    </RelativeLayout>

</LinearLayout >
